syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "com.betpawa.wallet";

package wallet;

message AmountRequest {
  int64 accountId = 1;
  string amount = 2;
  string info = 3;
}

message AmountResponse {
  google.protobuf.Timestamp timestamp = 1;
  string amount = 2;
  string info = 3;
}

service WalletInteractionService {

  rpc WinMoney (AmountRequest) returns (AmountResponse) {}
  
  rpc ReserveMoney (AmountRequest) returns (AmountResponse) {}
}

enum WalletErrorCode {
  INVALID_VALUE = 0;
  INVALID_ACCOUNT = 1;
  ACCOUNT_EXISTS = 2;
  NOT_ENOUGHT_MONEY = 3;
}

message WalletExceptionResponse {
  google.protobuf.Timestamp timestamp = 1;
  WalletErrorCode error_code = 2;
  string message = 3;
}
